--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-chartjs-2": "^5.2.0",
     "react-datepicker": "^4.25.0",
     "react-dom": "^18.2.0",
+    "react-js-loader": "^0.1.3",
     "react-router-dom": "^6.21.1",
     "react-scripts": "^5.0.1",
     "universal-cookie": "^7.0.1",
